--- a/project-bazaar/bazaar-front/package.json
+++ b/project-bazaar/bazaar-front/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.2.0",
+    "html2canvas": "^1.4.1",
+    "jotai": "^1.12.0",
+    "jspdf": "^2.5.1",
     "nano": "^10.1.0",
     "pg": "^8.8.0",
     "primeicons": "^6.0.1",
